--- a/pizza/templates/pizza/order.html
+++ b/pizza/templates/pizza/order.html
@@ -1,66 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+{% extends 'pizza/base.html' %}
+{% block 'body' %}
+{% load widget_tweaks %}
+  <div class="container">
+    <h1>Order a Pizza</h1>
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
-      crossorigin="anonymous"
-    />
+    <h2>{{ note }}</h2>
+    {% if created_pizza_pk %}
+    <a href="{% url 'edit_order' created_pizza_pk %}">Edit Your Order</a>
+    {% endif %}
 
-    <title>Nandia's Garden</title>
-  </head>
-  <body>
-    {% load widget_tweaks %}
-    <div class="container">
-      <h1>Order a Pizza</h1>
+    <form action="{% url 'order' %}" method="post">
+      {% csrf_token %}
+      {% for field in pizzaform %}
+        <div class="form-group">
+          {{ field.errors }} {{ field.label_tag }} {% render_field field class="form-control" %}
+        </div>
+      {% endfor %}
+      <input type="submit" value="Order Pizza" />
+    </form>
 
-      <h2>{{ note }}</h2>
-      {% if created_pizza_pk %}
-      <a href="{% url 'edit_order' created_pizza_pk %}">Edit Your Order</a>
-      {% endif %}
+    <br /><br />
 
-      <form action="{% url 'order' %}" method="post" novalidate>
-        {% csrf_token %}
-        {% for field in pizzaform %}
-          <div class="form-group">
-            {{ field.errors }}
-            {{ field.label_tag }}
-            {% render_field field class="form-control" %}
-          </div>
-        {% endfor %}
+    Want more than one pizza?
 
-        <input type="submit" value="Order Pizza" />
-      </form>
-
-      <br /><br />
-
-      Want more than one pizza?
-
-      <form action="{% url 'pizzas' %}" method="get">
-        {{ multiple_form }}
-        <input type="submit" value="Get Pizzas" />
-      </form>
-    </div>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
-    -->
-  </body>
-</html>
+    <form action="{% url 'pizzas' %}" method="get">
+      {{ multiple_form }}
+      <input type="submit" value="Get Pizzas" />
+    </form>
+  </div>
+{% endblock %}
